--- a/app/assets/stylesheets/tabs.css
+++ b/app/assets/stylesheets/tabs.css
@@ -50,5 +50,6 @@
   border:1px solid #e5e5e5;
   padding:10px;
   margin-bottom:10px;
+  min-width:714px;
 }
 
